タイトルに「【アップデート】」を追加し、フォーマットを修正

--- a/articles/22a07436f51248.md
+++ b/articles/22a07436f51248.md
@@ -1,5 +1,5 @@
 ---
-title: "【kanjiconv】Unidic & カスタム辞書対応（「漢字」→「かな/ローマ字」変換）"
+title: "【kanjiconv】【アップデート】Unidic & カスタム辞書対応（「漢字」→「かな/ローマ字」変換）"
 emoji: "㊙️"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["python", "ライブラリ", "自然言語処理", "unidic", "convert"]
