【アップデート】Claude Desktopでのデモ動画を追加

--- a/articles/01250b71950c6a.md
+++ b/articles/01250b71950c6a.md
@@ -29,6 +29,11 @@ https://github.com/sea-turt1e/kanjiconv_mcp
 - **漢字→カタカナ変換**: 「幽☆遊☆白書は最高の漫画です」→「ユウユウハクショハサイコウノマンガデス」
 - **漢字→ローマ字変換**: 「幽☆遊☆白書は最高の漫画です」→「yuuyuuhakushohasaiikounomangadesu」
 
+### Claude Desktopでのデモ
+今回のMCPサーバーをClaude Desktopに適用したデモ動画です。
+kanjiconvのMCPサーバーを使わないと、「幽☆遊☆白書」のひらがなへの変換は「ゆう☆ゆう☆はくしょ」になってしまいますが、MCPサーバーを使うことで「ゆうゆうはくしょ」と固有名詞を考慮した変換ができます。
+![デモ動画](/images/kanjiconv_mcp.gif)
+
 ## 技術スタック
 
 - **Python 3.13**: Python環境
@@ -206,9 +211,6 @@ CMD ["python", "main.py"]
 
 ## Claude Desktopでの設定
 以下のように`claude_desktop_config.json`を設定することで、Claude DesktopでMCPサーバーを利用できます。（筆者はMac環境で実行しました）
-
-### デモ
-![デモ動画](/images/kanjiconv_mcp.gif)
 
 ### ローカル実行版
 
